--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,6 +23,17 @@
             ],
         },
         {
+            "name": "Python: predict image generation",
+            "type": "python",
+            "request": "launch",
+            "program": "prediction.py",
+            "cwd": "${workspaceFolder}/image-generation",
+            "console": "integratedTerminal",
+            "args": [
+                "--dataset", "mnist", "--attention_type", "full", "--d_query", "32", "--n_heads", "2", "--n_layers", "2", "--mixtures", "10", "--index", "0-10", "--offset", "1", "--recurrent", "--force_cpu", "--save_image", "images/mnist.{}.{}.png", "saves/weights.6000.pth",
+            ],
+        },
+        {
             "name": "Python: main causal copy",
             "type": "python",
             "request": "launch",
@@ -30,7 +41,7 @@
             "cwd": "${workspaceFolder}/causal-copy",
             "console": "integratedTerminal",
             "args": [
-                "--attention_type", "full", "--d_query", "8", "--n_heads", "4", "--n_layers", "2", "--batch_size", "2", "--n_classes", "20", "--save_to", "/path/to/weights.{}.pth",
+                "--attention_type", "full", "--d_query", "8", "--n_heads", "4", "--n_layers", "2", "--batch_size", "2", "--n_classes", "20", "--save_to", "saves/weights.{}.pth",
             ],
         },
     ]
